@@ -1,15 +1,15 @@
 #define RUBY_VERSION "1.8.7"
-#define RUBY_RELEASE_DATE "2008-08-08"
+#define RUBY_RELEASE_DATE "2008-08-11"
 #define RUBY_VERSION_CODE 187
-#define RUBY_RELEASE_CODE 20080808
-#define RUBY_PATCHLEVEL 71
+#define RUBY_RELEASE_CODE 20080811
+#define RUBY_PATCHLEVEL 72
 
 #define RUBY_VERSION_MAJOR 1
 #define RUBY_VERSION_MINOR 8
 #define RUBY_VERSION_TEENY 7
 #define RUBY_RELEASE_YEAR 2008
 #define RUBY_RELEASE_MONTH 8
-#define RUBY_RELEASE_DAY 8
+#define RUBY_RELEASE_DAY 11
 
 #ifdef RUBY_EXTERN
 RUBY_EXTERN const char ruby_version[];
