@@ -31,6 +31,15 @@ Mon Aug  4 13:31:41 2008  NAKAMURA Usaku  <usa@ruby-lang.org>
 
 	* numeric.c (check_uint, rb_num2uint, rb_fix2uint): strict check.
 	  fixed [ruby-dev:33683]
+Mon Aug 11 09:37:17 2008  Yukihiro Matsumoto  <matz@ruby-lang.org>
+
+	* ext/dl/dl.c (rb_str_to_ptr): should propagate taint to dlptr.
+
+	* ext/dl/dl.c (rb_ary_to_ptr): ditto.
+
+	* ext/dl/sym.c (rb_dlsym_call): should check taint of DLPtrData as
+	  well.
+
 
 Thu Jul 17 21:42:07 2008  URABE Shyouhei  <shyouhei@ruby-lang.org>
 
